# SMCP

./: .gitignore  CMakeLists.txt  linker.ld  main.c  readme.md  startup.s  tools.c  tools.h
cmake/toolchains/: host.cmake  mcu.cmake
common/: board.h  registers.h  types.h
components/drivers/: gpio_driver.h  timer_driver.h
components/services/: led_service.cpp  led_service.h
docs/: doc_type.txt  info.txt
drivers/: gpio.c  gpio.h  matrix_keyboard.c  matrix_keyboard.h  smcp_gp_timer.c  smcp_gp_timer.h  smcp_gpio.c  smcp_gpio.h  timers.c  timers.h  tools.h
services/: led_service.c  led_service.h
toolchains/: gcc-arm-none-eabi.cmake
